--- a/Encrypter/static/html/contact.html
+++ b/Encrypter/static/html/contact.html
@@ -7,7 +7,54 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/dashboardpage.css" />
+
+    <style>
+        #email_contact {
+            font-size: 25px;
+            text-align: center;
+            color: black;
+        }
+
+
+        .fa {
+            display:block;
+            margin:0 auto;
+            padding: 20px;
+            font-size: 30px;
+            width: 50px;
+            text-align: center;
+            text-decoration: none;
+        }
+
+            /* Add a hover effect if you want */
+            .fa:hover {
+                opacity: 0.7;
+            }
+
+        /* Set a specific color for each brand */
+
+        /* Facebook */
+        .fa-facebook {
+            background: #3B5998;
+            color: white;
+        }
+
+        /* Twitter */
+        .fa-twitter {
+            background: #55ACEE;
+            color: white;
+            padding-right:20px;
+        }
+        div {
+            margin-top:20px;
+        }
+        h3 {
+            margin-top:40px;
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -19,5 +66,25 @@
             <a class="active" id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
         </div>
     </div>
+
+    <div><h4>You can contact us here!</h4></div>
+
+
+    <div>
+        <h3>Contact us on Facebook</h3>
+        <a href="#" class="fa fa-facebook"></a>
+    </div>
+    <div>
+        <h3>Contact us on Twitter</h3>
+        <a href="#" class="fa fa-twitter"></a>
+    </div>
+    <div>
+        <h3>Contact us on Instagram</h3>
+        <a href="#" class="fa fa-instagram"></a>
+    </div>
+    <div id="email_contact">
+        <a href="mailto: bryan@encrypter.com">Send us a Mail!</a>
+    </div>
+
 </body>
 </html>
