--- a/Encrypter/static/html/contact.html
+++ b/Encrypter/static/html/contact.html
@@ -11,48 +11,27 @@
     <link rel="stylesheet" href="../css/dashboardpage.css" />
 
     <style>
-        #email_contact {
+        #email_contact, #linkedin {
             font-size: 25px;
             text-align: center;
             color: black;
         }
 
-
-        .fa {
-            display:block;
-            margin:0 auto;
-            padding: 20px;
-            font-size: 30px;
-            width: 50px;
-            text-align: center;
-            text-decoration: none;
-        }
-
-            /* Add a hover effect if you want */
-            .fa:hover {
-                opacity: 0.7;
-            }
-
-        /* Set a specific color for each brand */
-
-        /* Facebook */
-        .fa-facebook {
-            background: #3B5998;
-            color: white;
-        }
-
-        /* Twitter */
-        .fa-twitter {
-            background: #55ACEE;
-            color: white;
-            padding-right:20px;
-        }
         div {
             margin-top:20px;
         }
+
         h3 {
             margin-top:40px;
             text-align:center;
+        }
+
+        img {
+            display:block;
+            margin-left:auto;
+            margin-right:auto;
+            height: 50px;
+            width: 50px;
         }
     </style>
 </head>
@@ -72,19 +51,22 @@
 
     <div>
         <h3>Contact us on Facebook</h3>
-        <a href="#" class="fa fa-facebook"></a>
+        <a href="#"><img src="../images/facebook.png" alt="Facebook"/></a>
     </div>
     <div>
         <h3>Contact us on Twitter</h3>
-        <a href="#" class="fa fa-twitter"></a>
+        <a href="#"><img src="../images/twitter.png" alt="Twitter" />  </a>
     </div>
     <div>
         <h3>Contact us on Instagram</h3>
-        <a href="#" class="fa fa-instagram"></a>
+        <a href="#"><img src="../images/instagram.png" alt="Instagram" /> </a>
     </div>
     <div id="email_contact">
         <a href="mailto: bryan@encrypter.com">Send us a Mail!</a>
     </div>
-
+    <div id="linkedin">
+        <h3>Developed by</h3>
+        <a href="https://in.linkedin.com/in/bryanlewis24">Bryan Lewis</a>
+    </div>
 </body>
 </html>
